projects/compiler/test/typechecker/for/error_bad_range_end.out
Error at %FILE_NAME%:1:12
Type mismatch
  |  for x in 0:"a" {
                ^
Expected: Int
but instead found: String
