projects/compiler/test/typechecker/for/error_bad_range_end.abra
for x in 0:"a" {
  val _: Int = x
}